--- a/src/style/components/dv-button.scss
+++ b/src/style/components/dv-button.scss
@@ -11,14 +11,14 @@
   cursor: pointer;
   transition: background-color 0.5s;
   text-decoration: none;
-}
 
-.dv-button.-small {
-  font-size: calc(var(--dv-font-size-base) + 4px);
-  font-weight: 600;
-  padding: 12px 30px;
-}
+  &.-small {
+    font-size: calc(var(--dv-font-size-base) + 4px);
+    font-weight: 600;
+    padding: 12px 30px;
+  }
 
-.dv-button:hover {
-  background-color: var(--dv-color-primary-light);
+  &:hover {
+    background-color: var(--dv-color-primary-light);
+  }
 }
