--- a/src/style/components/dv-header.scss
+++ b/src/style/components/dv-header.scss
@@ -8,63 +8,63 @@
   z-index: 1;
   top: 0;
   left: 0;
-}
 
-.dv-header >.wrapper {
-  max-width: var(--dv-main-wrapper);
-  margin: 0 auto;    
-  display: flex;
-  justify-content: center;
-}
+  > .wrapper {
+    max-width: var(--dv-main-wrapper);
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
 
-.dv-header >.wrapper.-has-user {
-  display: grid;
-  grid-template-columns: 1fr auto 1fr;
-}
+    &.-has-user {
+      display: grid;
+      grid-template-columns: 1fr auto 1fr;
+    }
 
-/*Logo*/
-.dv-header >.wrapper >.logo-wrapper {
-  height: var(--dv-header-size);
-  padding: 16px 0;
-}
+    /*Logo*/
+    > .logo-wrapper {
+      height: var(--dv-header-size);
+      padding: 16px 0;
 
-.dv-header >.wrapper >.logo-wrapper >.image {
-  height: 100%;
-}
+      > .image {
+        height: 100%;
+      }
+    }
 
-/*Usuário*/
-.dv-header >.wrapper >.user {
-  display: flex;
-  align-items: center;
-  margin-left: auto;
-}
+    /*Usuário*/
+    > .user {
+      display: flex;
+      align-items: center;
+      margin-left: auto;
 
-.dv-header >.wrapper >.user >.info {
-  text-align: right;
-}
+      > .info {
+        text-align: right;
 
-.dv-header >.wrapper >.user >.info >.name {
-  display: block;
-  font-weight: 800;
-  font-size: calc(var(--dv-font-size-base) + 4px);
-  margin-bottom: 3px;
-}
+        > .name {
+          display: block;
+          font-weight: 800;
+          font-size: calc(var(--dv-font-size-base) + 4px);
+          margin-bottom: 3px;
+        }
 
-.dv-header >.wrapper >.user >.info >.role {
-  font-weight: 400;
-  font-size: calc(var(--dv-font-size-base) + 2px);
-}
+        > .role {
+          font-weight: 400;
+          font-size: calc(var(--dv-font-size-base) + 2px);
+        }
+      }
 
-.dv-header >.wrapper >.user >.photo-wrapper {
-  margin-left: 16px;
-  height: 32px;
-  width: 32px;
-  border-radius: 50%;
-  border: 1px solid var(--dv-color-primary);
-  overflow: hidden;
-}
+      > .photo-wrapper {
+        margin-left: 16px;
+        height: 32px;
+        width: 32px;
+        border-radius: 50%;
+        border: 1px solid var(--dv-color-primary);
+        overflow: hidden;
 
-.dv-header >.wrapper >.user >.photo-wrapper >img {
-  height: 100%;
-  width: 100%;
+        > img {
+          height: 100%;
+          width: 100%;
+        }
+      }
+    }
+  }
 }
