--- a/src/style/components/main.scss
+++ b/src/style/components/main.scss
@@ -1,2 +1,1 @@
-@import "dv-button", "dv-header", "dv-input", "dv-radio", "dv-table",
-  "dv-toogle";
+@import "dv-input", "dv-radio", "dv-table", "dv-toogle";
