--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,2 +1,2 @@
-@import "settings/main", "generic/main", "base/main", "objects/main",
-  "components/main";
+@import "settings/main", "generic/main", "base/main", "plugins/main",
+  "objects/main", "components/main";
