--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,4 @@
 @import "src/style/main.scss";
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
