--- a/src/app/features/dv-wrapper/dv-wrapper.component.scss
+++ b/src/app/features/dv-wrapper/dv-wrapper.component.scss
@@ -8,7 +8,7 @@
     grid-template-columns: 1fr 1fr;
     padding-top: var(--dv-header-size);
 
-    &-one-col {
+    &.-one-col {
       grid-template-columns: 1fr;
     }
 
