--- a/src/app/features/dv-wrapper/dv-wrapper.component.html
+++ b/src/app/features/dv-wrapper/dv-wrapper.component.html
@@ -1,6 +1,9 @@
 <div class="dv-wrapper">
   <dv-header></dv-header>
   <main class="main-content" [class.-one-col]="type === 'one-col'">
+    <a *ngIf="back" class="back-btn material-icons" (click)="redirectTo(back)">
+      keyboard_arrow_left
+    </a>
     <ng-content></ng-content>
   </main>
 </div>
