--- a/src/app/pages/project-create-edit/project-create-edit.component.html
+++ b/src/app/pages/project-create-edit/project-create-edit.component.html
@@ -1,23 +1,42 @@
 <div class="dv-project-create-edit">
   <dv-wrapper back="list">
-    <form class="left">
+    <form
+      class="left"
+      (submit)="createOrEdit()"
+      [formGroup]="projectCreateEditForm"
+    >
       <h1 class="main-title">{{ title }}</h1>
 
-      <input required id="title" class="dv-input" placeholder="Título" />
-      <input
-        required
-        id="totalCost"
-        class="dv-input"
-        placeholder="Custo Total"
-      />
-      <textarea
-        required
-        id="description"
-        class="dv-input"
-        placeholder="Descrição"
-      ></textarea>
+      <mat-form-field appearance="legacy">
+        <mat-label>Título</mat-label>
+        <input matInput formControlName="title" />
+        <mat-error *ngIf="isInvalid('title', 'required')">{{
+          msg.required
+        }}</mat-error>
+      </mat-form-field>
 
-      <dv-button [text]="actionButtonText" (click)="createOrEdit()"></dv-button>
+      <mat-form-field appearance="legacy">
+        <mat-label>Custo Total</mat-label>
+        <input
+          matInput
+          formControlName="totalCost"
+          mask="separator.2"
+          thousandSeparator="."
+        />
+        <mat-error *ngIf="isInvalid('totalCost', 'required')">{{
+          msg.required
+        }}</mat-error>
+      </mat-form-field>
+
+      <mat-form-field appearance="legacy">
+        <mat-label>Descrição</mat-label>
+        <textarea matInput formControlName="description"></textarea>
+        <mat-error *ngIf="isInvalid('description', 'required')">{{
+          msg.required
+        }}</mat-error>
+      </mat-form-field>
+
+      <dv-button [text]="actionButtonText"></dv-button>
     </form>
     <div class="right">
       <img
